--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<!--Custom-->
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
+
 	</head>
 	<body>
 		<div class="navbar navbar-default navbar-static-top" role="navigation">
@@ -556,52 +557,52 @@
 				        </div>
 				      </div>
 					</div> -->
-	      <div class="col-md-6 col-md-offset-3">
-		    <form class="well form-horizontal" action="https://formspree.io/zhiyong.ong@u.nus.edu" method="post" id="contactForm">			
-			<!-- Text input-->
-			<div class="form-group">
-			  <label class="col-md-3 control-label">Name</label> 
-			    <div class="col-md-9 inputGroupContainer">
-			    <div class="input-group">
-			  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-			  <input name="name" placeholder="Your name" class="form-control"  type="text">
-			    </div>
-			  </div>
-			</div>
+		      <div class="col-md-6 col-md-offset-3">
+			    <form class="well form-horizontal" action="https://formspree.io/zhiyong.ong@u.nus.edu" method="post" id="contactForm">			
+				<!-- Text input-->
+				<div class="form-group">
+				  <label class="col-md-3 control-label">Name</label> 
+				    <div class="col-md-9 inputGroupContainer">
+				    <div class="input-group">
+				  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+				  <input name="name" placeholder="Your name" class="form-control" type="text" required>
+				    </div>
+				  </div>
+				</div>
 
-			<!-- Text input-->
-	       <div class="form-group">
-			  <label class="col-md-3 control-label">E-Mail</label>  
-			    <div class="col-md-9 inputGroupContainer">
-			    <div class="input-group">
-			        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-			  <input name="_replyto" placeholder="Your E-Mail Address" class="form-control" type="email">
-			    </div>
-			  </div>
-			</div>
+				<!-- Text input-->
+		       <div class="form-group">
+				  <label class="col-md-3 control-label">E-Mail</label>  
+				    <div class="col-md-9 inputGroupContainer">
+				    <div class="input-group">
+				        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+				  <input name="_replyto" placeholder="Your E-Mail Address" class="form-control" type="email" required>
+				    </div>
+				  </div>
+				</div>
 
 
-			  
-			<div class="form-group">
-			  <label class="col-md-3 control-label">Message</label>
-			    <div class="col-md-9 inputGroupContainer">
-			    <div class="input-group">
-			        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-			        	<textarea class="form-control" name="message" placeholder="Your Message" rows="7"></textarea>
-			  </div>
-			  </div>
-			</div>
+				  
+				<div class="form-group">
+				  <label class="col-md-3 control-label">Message</label>
+				    <div class="col-md-9 inputGroupContainer">
+				    <div class="input-group">
+				        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+				        	<textarea class="form-control" name="message" placeholder="Your Message" rows="7" required></textarea>
+				  </div>
+				  </div>
+				</div>
 
-			<!-- Button -->
-			<div class="form-group">
-			  <label class="col-md-4 control-label"></label>
-			  <div class="col-md-4">
-			    <button type="submit" class="btn btn-primary" >Send <span class="glyphicon glyphicon-send"></span></button>
-			  </div>
-			</div>
+				<!-- Button -->
+				<div class="form-group">
+				  <label class="col-md-4 control-label"></label>
+				  <div class="col-md-4 text-middle">
+				    <button type="submit" class="btn btn-primary btn-lg" >Send <span class="glyphicon glyphicon-send"></span></button>
+				  </div>
+				</div>
 
-			</form>
-			</div>
+				</form>
+				</div>
 		</div>
 			
 		</section>
