--- a/index.html
+++ b/index.html
@@ -18,30 +18,35 @@
 
 	</head>
 	<body>
-		<div class="navbar navbar-default navbar-static-top" role="navigation">
+		<nav class="navbar navbar-inverse navbar-static-top">
 			<div class="container">
     			<div class="navbar-header">
+    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>                        
+			      	</button>
       				<a href="#home" class="navbar-brand">ZHI YONG (JAMES)</a>
     			</div>
-			    <div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li><a href="http://www.facebook.com/ongzhiyong" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/zhi-yong-ong-6b8ba3ba" target="_blank"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
-					<li><a href="https://github.com/zhiyong-ong" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
-				</ul>
+			    <div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav">
+						<li class="navbar-li"><a href="http://www.facebook.com/ongzhiyong" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+						<li class="navbar-li"><a href="https://www.linkedin.com/in/zhi-yong-ong-6b8ba3ba" target="_blank"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
+						<li class="navbar-li"><a href="https://github.com/zhiyong-ong" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
+					</ul>
 
 			      	<ul class="nav navbar-nav navbar-right">
-			      		<li><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#education">Education</a></li>
-						<li><a href="#workexperiences">Work Experiences</a></li>
-						<li><a href="#projects-summary">Projects</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#contact-form">Contact</a></li>
+			      		<li class="navbar-li"><a href="#home">Home</a></li>
+						<li class="navbar-li"><a href="#about">About</a></li>
+						<li class="navbar-li"><a href="#education">Education</a></li>
+						<li class="navbar-li"><a href="#workexperiences">Work Experiences</a></li>
+						<li class="navbar-li"><a href="#projects-summary">Projects</a></li>
+						<li class="navbar-li"><a href="#skills">Skills</a></li>
+						<li class="navbar-li"><a href="#contact-form">Contact</a></li>
 			      	</ul>
 			    </div>
   			</div>
-		</div>
+		</nav>
 
 		<!-- Home section -->
 		<section id="home" class="parallax-section">
