--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<title>Zhi Yong</title>
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
 		<!--Bootstrap-->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">	<!--FontAwesome-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		<!--FontAwesome-->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<!--Animate-->
 		<link rel="stylesheet" href="css/animate.min.css">
@@ -18,35 +20,35 @@
 
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="navbar navbar-inverse navbar-static-top" role="navigation">
 			<div class="container">
     			<div class="navbar-header">
+      				<a href="#home" class="navbar-brand">ZHI YONG (JAMES)</a>
     				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+		                <span class="sr-only">Toggle navigation</span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 			      	</button>
-      				<a href="#home" class="navbar-brand">ZHI YONG (JAMES)</a>
     			</div>
-			    <div class="collapse navbar-collapse" id="myNavbar">
+			    <div id="myNavbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="navbar-li"><a href="http://www.facebook.com/ongzhiyong" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-						<li class="navbar-li"><a href="https://www.linkedin.com/in/zhi-yong-ong-6b8ba3ba" target="_blank"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
-						<li class="navbar-li"><a href="https://github.com/zhiyong-ong" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
+						<li><a href="http://www.facebook.com/ongzhiyong" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/zhi-yong-ong-6b8ba3ba" target="_blank"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
+						<li><a href="https://github.com/zhiyong-ong" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
 					</ul>
 
 			      	<ul class="nav navbar-nav navbar-right">
-			      		<li class="navbar-li"><a href="#home">Home</a></li>
-						<li class="navbar-li"><a href="#about">About</a></li>
-						<li class="navbar-li"><a href="#education">Education</a></li>
-						<li class="navbar-li"><a href="#workexperiences">Work Experiences</a></li>
-						<li class="navbar-li"><a href="#projects-summary">Projects</a></li>
-						<li class="navbar-li"><a href="#skills">Skills</a></li>
-						<li class="navbar-li"><a href="#contact-form">Contact</a></li>
+			      		<li><a href="#home"><b>Home</b></a></li>
+						<li><a href="#about"><b>About</b></a></li>
+						<li><a href="#workexperiences"><b>Work Experiences</b></a></li>
+						<li><a href="#projects-summary"><b>Projects</b></a></li>
+						<li><a href="#skills"><b>Skills</b></a></li>
+						<li><a href="#contact-form"><b>Contact</b></a></li>
 			      	</ul>
 			    </div>
   			</div>
-		</nav>
+		</div>
 
 		<!-- Home section -->
 		<section id="home" class="parallax-section">
