--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 			<div class="container">
     			<div class="navbar-header">
       				<a href="#home" class="navbar-brand">ZHI YONG (JAMES)</a>
-    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="navbar">
+    				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" >
 		                <span class="sr-only">Toggle navigation</span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>                        
 			      	</button>
     			</div>
-			    <div id="myNavbar" class="navbar-collapse collapse">
+			    <div id="myNavbar" class="collapse navbar-collapse navbar-responsive-collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="http://www.facebook.com/ongzhiyong" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/zhi-yong-ong-6b8ba3ba" target="_blank"><i class="fa fa-linkedin-square fa-lg"></i></a></li>
