fixed mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
 		<section id="about">
 			<div class="container">
 				<div class="row">
-      				<div class="col-md-1"></div>
       				<div class="col-md-4">
       					<div class="about-card">
       						<div class="about-card-image">
-      							<img src="images/profile.jpg" class="img-responsive" alt="Profile">
+      							<img src="images/profile.jpg" class="img-responsive center-block" alt="Profile Picture">
       						</div>
       						<div class="about-card-info">
       							<h4 class="about-card-name">Zhi Yong (James)</h4>
@@ -84,15 +83,14 @@
       						</div>
   						</div>
       				</div>
-      				<div class="col-md-6">
+      				<div class="col-md-8">
       					<div class="about-description">
       						<span><i class="fa fa-user fa-2x"></i></span>
             				<h2>About Me</h2>
       						<p>Creating innovative systems that can enhance the quality of life for people has always been my passion and aspiration. The idea that a software system can be written out with no additional tools other than your computer, which ultimately helps to improve the work process of mundane tasks for people, has always fascinated me. Coupled along with artificial intelligence, which is a key interest of mine, I believe that such systems have the potential to be improved greatly, which ultimately benefits the mass public who uses the system.</p>
-      						<p>I believe I am a self-motivated team player with great interpersonal skills, while possessing a diverse skillset. I am able to handle multiple tasks and adhere to their respective deadlines while providing quality work in them. Moreover, I have the determination to go the extra mile to learn new skills in order to get a task done.</p>
+      						<p>I am a self-motivated team player with great interpersonal skills and possess a diverse skillset. I am able to handle multiple tasks and adhere to their respective deadlines while providing quality work in them. Moreover, I have the determination to go the extra mile to learn new skills in order to get a task done.</p>
       					</div>
       				</div>
-      				<div class="col-md-1"></div>
 				</div>
 			</div>
 		</section>
@@ -122,7 +120,7 @@
 							<i class="fa fa-mortar-board fa-4x"></i>
 						</div>
 						<div class="edu-body">
-							<h3><strong>National Junior Collegec</strong></h3>
+							<h3><strong>National Junior College</strong></h3>
 							<p>General Certificate of Education (GCE) Advanced Level</p>
 							<p><i class="fa fa-calendar"></i> 2011 - 2012 </p>
 						</div>
@@ -179,7 +177,7 @@
 	      					<div class="row">
 	      						<div class="work-info">
 		      						<div class="col-md-3">
-		      							<img src="images/ecq-logo.jpg" class="img-responsive relevant-logo" alt="Ecquaria" height="150" align="top">
+		      							<img src="images/ecq-logo.jpg" class="img-responsive center-block" alt="Ecquaria">
 		      						</div>
 		      						<div class="col-md-8">
 		      							<h3>Software Engineer Intern</h3>
@@ -208,7 +206,7 @@
 	      					<div class="row">
 	      						<div class="work-info">
 		      						<div class="col-md-3">
-		      							<img src="images/SC.jpeg" class="img-responsive relevant-logo" alt="Standard Chartered" height="150" align="top">
+		      							<img src="images/standard-chartered-logo.jpg" class="img-responsive center-block long-logo" alt="Standard Chartered">
 		      						</div>
 		      						<div class="col-md-8">
 		      							<h3>Software Engineer Intern - Financial Markets Flow Technology (Expected)</h3>
@@ -372,7 +370,7 @@
   				<div class="col-md-6">
   					<div class="project-box">
   						<a href="https://github.com/zhiyong-ong/Food_Search" target="_blank">
-      						<div class="project-header" style="background-image: url('images/menusnap3_1.jpg');">
+      						<div class="project-header" style="background-image: url('images/menusnap3_4.jpg');">
       							<div class="overlay"></div>
       						</div>
   						</a>
