--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	</head>
 	<body>
-		<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+		<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 			<div class="container">
     			<div class="navbar-header">
       				<a href="#home" class="navbar-brand">ZHI YONG (JAMES)</a>
