changed text for some boxes

--- a/index.html
+++ b/index.html
@@ -279,40 +279,11 @@
       								</div>
   								</div>
       							<div class="row project-info-description">
-      								The objective of the project is to demonstrate database concepts in a web application, with an assigned theme of 'Crowdfunding'. The web application consists of the general user site and an admin site, with their respective functionalities. Database design &amp; implementation are also carried out in the project.
+      								Crowdfunder was a module project which had the objective of demonstrating the use of database concepts, including database design, in a web application. The purpose Crowdfunder was to provide a platform for people to view various projects and provide funds for them accordingly. It consisted of the general user site and an administrative site. A user would be able to view the projects and provide funds for their desired project while an adminstrator would be able to add, delete and edit the users, projects and fundings respectively.
       							</div>
       						</div>
       					</div>
   					</div>
-      				<div class="col-md-6">
-      					<div class="project-box">
-      						<a href="http://github.com/CS2103AUG2016-W14-C3/main" target="_blank">
-      							<div class="project-header" style="background-image: url('images/taskle.png');">
-      								<div class="overlay"></div>
-      							</div>
-  							</a>
-      						<div class="project-info">
-      							<div class="row">
-      								<div class="col-md-5">
-      									<i class="fa fa-laptop" style="float:left;"></i><h4>Taskle</h4>
-      								</div>
-      								<div class="col-md-3 project-info-header">
-      									<i class="fa fa-calendar"></i><span>Aug - Nov '16</span>
-      								</div>
-      								<div class="col-md-4 project-info-header">
-      									<i class="fa fa-code"></i><span>Java, JavaFX</span>
-      								</div>
-  								</div>
-      							<div class="row project-info-description">
-	      								Taskle is a simple to-do manager that handles your tasks with single lines of command. Most of the user's interactions are done via the Command Line Interface. The project was carried out while adhering to the principles of Software Development Life Cycle. Java was the main programming language used for the project.
-	      						</div>
-	      					</div>
-	  					</div>
-					</div>
-				</div>
-				<br><br>
-
-				<div class="row">
 					<div class="col-md-6">
 	      					<div class="project-box">
 	      						<a href="https://github.com/zhiyong-ong/iFridge" target="_blank">
@@ -333,68 +304,95 @@
 	      								</div>
 	  								</div>
 	      							<div class="row project-info-description">
-	      								iFridge was a project done in the Hack &amp; Hackathon 2017. It has a multi-item detection system that employs a Convolutional Neural Network to identify the items in the fridge. The dataset was collected and amplified manually through cropping and rotating the photos taken of the groceries in the fridge. The list of items detected is sent over to the Android mobile application, allowing the user to know what is inside their fridge at any point of time. The application also has the function to suggest possible recipes given the existing items in the fridge.
+	      								iFridge was a project done in the Hack &amp; Roll Hackathon 2017. It has a multi-item detection system that employs a Convolutional Neural Network to identify the items in the fridge. The dataset was collected and amplified manually through cropping and rotating the photos taken of the groceries in the fridge. The list of items detected is sent over to the Android mobile application, allowing the user to know what is inside their fridge at any point of time. The application also has the function to suggest possible recipes given the existing items in the fridge.
 	      							</div>
 	      						</div>
 	      					</div>
 	  					</div>
-      				<div class="col-md-6">
-      					<div class="project-box">
-      						<a href="https://github.com/zhiyong-ong/Maching-Learning-Facial-Recognition" target="_blank">
-	      						<div class="project-header" style="background-image: url('images/lfw.png');">
+	  				</div>
+	  				<br><br>
+	  				<div class="row">
+	      				<div class="col-md-6">
+	      					<div class="project-box">
+	      						<a href="https://github.com/zhiyong-ong/Maching-Learning-Facial-Recognition" target="_blank">
+		      						<div class="project-header" style="background-image: url('images/lfw.png');">
+		      							<div class="overlay"></div>
+		      						</div>
+	      						</a>
+	      						<div class="project-info">
+	      							<div class="row">
+	      								<div class="col-md-6">
+	      									<i class="fa fa-laptop" style="float:left;"></i><h4>Facial Recognition</h4>
+	      								</div>
+	      								<div class="col-md-3 project-info-header">
+	      									<i class="fa fa-calendar"></i><span>Oct - Nov '16</span>
+	      								</div>
+	      								<div class="col-md-3 project-info-header">
+	      									<i class="fa fa-code"></i><span>Python</span>
+	      								</div>
+	  								</div>
+	      							<div class="row project-info-description">
+										The facial recognition model was created in Python and is able to ‘learn’ the faces of people through the online dataset Labeled Faces in the Wild. When given a new picture of a person in the same dataset, the model can recognize him/her, i.e. by putting a label to the person’s face. Principal Component Analysis (PCA) was employed to extract the key features of each image. Using the reduced images size, we tested various Machine Learning techniques such as Support Vector Machines, Neural Network, Decision Trees, while using 10-fold Cross Validation to check the accuracy rate.
+									</div>
+	      						</div>
+	      					</div>
+  						</div>
+	  					<div class="col-md-6">
+	      					<div class="project-box">
+	      						<a href="http://github.com/CS2103AUG2016-W14-C3/main" target="_blank">
+	      							<div class="project-header" style="background-image: url('images/taskle.png');">
+	      								<div class="overlay"></div>
+	      							</div>
+	  							</a>
+	      						<div class="project-info">
+	      							<div class="row">
+	      								<div class="col-md-5">
+	      									<i class="fa fa-laptop" style="float:left;"></i><h4>Taskle</h4>
+	      								</div>
+	      								<div class="col-md-3 project-info-header">
+	      									<i class="fa fa-calendar"></i><span>Aug - Nov '16</span>
+	      								</div>
+	      								<div class="col-md-4 project-info-header">
+	      									<i class="fa fa-code"></i><span>Java, JavaFX</span>
+	      								</div>
+	  								</div>
+	      							<div class="row project-info-description">
+	      								Taskle was a project for the software engineering module in the National University of Singapore. It is a simple task manager desktop application that allows the user to store tasks and events, along with the reminders for them, using single lines of command. Most of the user's interactions with the application are done via the Command Line Interface. The project was carried out while adhering to the software engineering principles and following a standard software development life cycle.
+		      						</div>
+		      					</div>
+		  					</div>
+						</div>
+					</div>
+				<br><br>
+				<div class="row">
+					<div class="col-md-3"></div>
+  					<div class="col-md-6">
+  						<div class="project-box">
+	  						<a href="https://github.com/zhiyong-ong/Food_Search" target="_blank">
+	      						<div class="project-header" style="background-image: url('images/menusnap3_4.jpg');">
 	      							<div class="overlay"></div>
 	      						</div>
-      						</a>
-      						<div class="project-info">
-      							<div class="row">
-      								<div class="col-md-6">
-      									<i class="fa fa-laptop" style="float:left;"></i><h4>Facial Recognition</h4>
-      								</div>
-      								<div class="col-md-3 project-info-header">
-      									<i class="fa fa-calendar"></i><span>Oct - Nov '16</span>
-      								</div>
-      								<div class="col-md-3 project-info-header">
-      									<i class="fa fa-code"></i><span>Python</span>
-      								</div>
-  								</div>
-      							<div class="row project-info-description">
-									The facial recognition model was created in Python and is able to ‘learn’ the faces of people through the online dataset Labeled Faces in the Wild. When given a new picture of a person in the same dataset, the model can recognize him/her, i.e. by putting a label to the person’s face. Principal Component Analysis (PCA) was employed to extract the key features of each image. Using the reduced images size, we tested various Machine Learning techniques such as Support Vector Machines, Neural Network, Decision Trees, while using 10-fold Cross Validation to check the accuracy rate.
-								</div>
-      						</div>
-      					</div>
-  					</div>
-      				
-				</div>
-			<br><br>
-			<div class="row">
-				<div class="col-md-3"></div>
-  				<div class="col-md-6">
-  					<div class="project-box">
-  						<a href="https://github.com/zhiyong-ong/Food_Search" target="_blank">
-      						<div class="project-header" style="background-image: url('images/menusnap3_4.jpg');">
-      							<div class="overlay"></div>
-      						</div>
-  						</a>
-  						<div class="project-info">
-  							<div class="row">
-  								<div class="col-md-4">
-  									<i class="fa fa-laptop" style="float:left;"></i><h4>MenuSnap</h4>
-  								</div>
-  								<div class="col-md-4 project-info-header">
-  									<i class="fa fa-calendar"></i><span>May - Aug '16</span>
-  								</div>
-  								<div class="col-md-4 project-info-header">
-  									<i class="fa fa-code"></i><span>Android</span>
-  								</div>
-								</div>
-  							<div class="row project-info-description">
-								MenuSnap is an android mobile application for the public to use in a food establishment, with the objective to provide more information regarding the menu item on the food establishment’s menu, in the user's preferred language. The application requires the user to take a picture of the menu and the application will use Optical Character Recognition (OCR) to “scan” the picture, rendering the individual menu items on the menu to be searchable on the mobile application. Relevant images and descriptions of the menu item will be shown to the user after searching for the particular menu item. View the Playstore link <a href="https://play.google.com/store/apps/details?id=orbital.com.menusnap&hl=en">here</a>.
-  							</div>
+	  						</a>
+	  						<div class="project-info">
+	  							<div class="row">
+	  								<div class="col-md-4">
+	  									<i class="fa fa-laptop" style="float:left;"></i><h4>MenuSnap</h4>
+	  								</div>
+	  								<div class="col-md-4 project-info-header">
+	  									<i class="fa fa-calendar"></i><span>May - Aug '16</span>
+	  								</div>
+	  								<div class="col-md-4 project-info-header">
+	  									<i class="fa fa-code"></i><span>Android</span>
+	  								</div>
+									</div>
+	  							<div class="row project-info-description">
+									MenuSnap is an android mobile application for the public to use in a food establishment, with the objective to provide more information regarding the menu item on the food establishment’s menu, in the user's preferred language. The application requires the user to take a picture of the menu and the application will use Optical Character Recognition (OCR) to “scan” the picture, rendering the individual menu items on the menu to be searchable on the mobile application. Relevant images and descriptions of the menu item will be shown to the user after searching for the particular menu item. View the Playstore link <a href="https://play.google.com/store/apps/details?id=orbital.com.menusnap&hl=en">here</a>.
+	  							</div>
 							</div>
   						</div>
   					</div>
-					</div>
-		</div>
+				</div>
+			</div>
 		</section>
 
 		<!--Skills Section-->
