edited work experience in CV

--- a/index.html
+++ b/index.html
@@ -183,20 +183,18 @@
 		      							<img src="images/standard-chartered-logo.jpg" class="img-responsive center-block long-logo" alt="Standard Chartered">
 		      						</div>
 		      						<div class="col-md-8">
-		      							<h3>Software Engineer Intern - Financial Markets Flow Technology (Expected)</h3>
+		      							<h3>Software Engineer Intern - Financial Markets Flow Technology</h3>
 		     	 						<p><i class="fa fa-building"></i> <strong>Standard Chartered</strong></p>
 		     	 						<p><span><i class="fa fa-calendar"></i> May - Aug 2017 <i class="fa fa-globe"></i> Singapore</span></p>
 		      						</div>
 	      						</div>
 	      					</div>
-<!-- 	      					<div class="row">
+	      					<div class="row">
 	      						<div class="work-description">
-	      							<p><i class="fa fa-check-circle fa-fw"></i> Assisted in creating a new system to replace the current one in use by a government agency.</p>
-		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Modified and tested existing data migration scripts for migrating data from the old system to the new one.</p>
-		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Designed and implemented web pages for the system using JSP on the Struts 2 framework.</p>
-		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Automated the process of creating non-technical documents for the client using VB.</p>
+	      							<p><i class="fa fa-check-circle fa-fw"></i> Assisted in the development of the Standard Chartered Analytics, Bookings and Risk Engine (SABRE), using Java, JSP, Spring, Cucumber and HQL.</p>
+		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Assisted in DevOps for SABRE by migrating the system staged forproduction into the cloud for easy integration with other components, using Ansible.</p>
 	      						</div>
-	      					</div> -->
+	      					</div>
       					</div>
       				</div>
   				</div>
@@ -219,7 +217,7 @@
 	      					</div>
 	      					<div class="row">
 	      						<div class="work-description">
-	      							<p><i class="fa fa-check-circle fa-fw"></i> Assisted in creating a new system to replace the current one in use by a government agency.</p>
+	      							<p><i class="fa fa-check-circle fa-fw"></i> Assisted in creating a new system to replace the current one in use by a government agency, using Java, JSP and SQL.</p>
 		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Modified and tested existing data migration scripts for migrating data from the old system to the new one.</p>
 		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Designed and implemented web pages for the system using JSP on the Struts 2 framework.</p>
 		 	 						<p><i class="fa fa-check-circle fa-fw"></i> Automated the process of creating non-technical documents for the client using VB.</p>
@@ -480,8 +478,22 @@
       						<p class="text-left"><i class="fa fa-photo"></i><b> Multimedia:</b></p>
       					</div>
       					<div class="sub-skills">
+	      					<div class="row">
+	      						<div class="skillbar clearfix wow fadeInUp" data-wow-duration="1.0s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 1s; animation-delay:0.3s; animation-name: fadeInUp;" data-percent="70%">
+									<div class="skillbar-title" style="background: #00B808;"><span>ReactJS</span></div>
+									<div class="skillbar-bar" style="background: #13DA1C;"></div>
+									<div class="skillbar-percent"><b>Intermediate</b></div>
+								</div> 
+	      					</div>
+	      					<div class="row">
+	      						<div class="skillbar clearfix wow fadeInUp" data-wow-duration="1.0s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 1s; animation-delay:0.3s; animation-name: fadeInUp;" data-percent="70%">
+									<div class="skillbar-title" style="background: #25734C;"><span>NodeJS</span></div>
+									<div class="skillbar-bar" style="background: #529A76;"></div>
+									<div class="skillbar-percent"><b>Intermediate</b></div>
+								</div> 
+	      					</div>
       						<div class="row">
-	      						<div class="skillbar clearfix wow fadeInUp" data-wow-duration="1.0s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 1.5s; animation-delay:0.3s; animation-name: fadeInUp;" data-percent="100%">
+	      						<div class="skillbar clearfix wow fadeInUp" data-wow-duration="1.0s" data-wow-delay="0.3s" style="visibility: visible; animation-duration: 1.5s; animation-delay:0.3s; animation-name: fadeInUp;" data-percent="80%">
 									<div class="skillbar-title" style="background: #69269E;"><span>Adobe Illustrator</span></div>
 									<div class="skillbar-bar" style="background: #A040EC;"></div>
 									<div class="skillbar-percent"><b>Proficient</b></div>
